# ytb-downloader

./: .gitignore  README.md  downloader.py  main.py  pyproject.toml  requirements.txt
ytb_downloader/: __init__.py  cli.py  cookies.py  utils.py
ytb_downloader/core/: __init__.py  audio.py  convert.py  download.py  video.py  ydl_opts.py
ytb_downloader/ui/: __init__.py  prompts.py
